# miru

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
miru/: CLAUDE.md  Cargo.toml
miru-cli/: CLAUDE.md  Cargo.toml
miru-cli/src/: watcher.rs
miru-cli/src/markdown/: mod.rs  renderer.rs
miru-mermaid/: CLAUDE.md  Cargo.toml
miru-mermaid/src/: lib.rs
miru-mermaid/src/layout/: flowchart.rs  mod.rs  sequence.rs
miru-mermaid/src/parser/: common.rs  flowchart.rs  mod.rs  sequence.rs
miru-mermaid/src/render/: canvas.rs  flowchart.rs  mod.rs  sequence.rs  style.rs
miru/src/: app.rs  main.rs
