[workspace]
members = ["miru", "miru-mermaid"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["cobuter-man"]
license = "MIT"
repository = "https://github.com/cobuter-man/miru"
description = "Terminal markdown renderer with inline mermaid ASCII diagrams"

[workspace.dependencies]
petgraph = "0.8"
unicode-width = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
# Correctness — deny
correctness = { level = "deny", priority = -1 }
enum_glob_use = "deny"
lossy_float_literal = "deny"

# Dev guards — warn
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"

# Pedantic subset — warn
cloned_instead_of_copied = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_continue = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"

# Allowed — suppress pedantic false positives
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
