[package]
name = "miru-mermaid"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Mermaid diagram to ASCII/Unicode text renderer"
exclude = ["CLAUDE.md"]

[lib]
name = "miru_mermaid"
path = "src/lib.rs"

[dependencies]
petgraph = { workspace = true }
unicode-width = { workspace = true }

[lints]
workspace = true
